force-app/main/default/objects/BUSpecificAutoEmailMapping__mdt/BUSpecificAutoEmailMapping__mdt.object-meta.xml
<CustomObject>
    <label>BUSpecificAutoEmailMapping</label>
    <pluralLabel>BUSpecificAutoEmailMappings</pluralLabel>
</CustomObject>