force-app/main/default/objects/BUSpecificAutoEmailMapping__mdt/fields/Default_Automated_Email_From_Address__c.field-meta.xml
<CustomField>
    <fullName>Default_Automated_Email_From_Address__c</fullName>
    <label>Default Automated Email From Address</label>
    <required>true</required>
    <type>Email</type>
</CustomField>