force-app/main/default/objects/BUSpecificAutoEmailMapping__mdt/fields/Reply_To_Address__c.field-meta.xml
<CustomField>
    <fullName>Reply_To_Address__c</fullName>
    <description>This field is use to add reply to address while sending email via Email Framework.</description>
    <label>Reply To Address</label>
    <required>true</required>
    <type>Email</type>
</CustomField>